tests/paczka1/fuzzy1/39351141.err
Error in line 1: HXm A89 1,1
Error in line 2: HXm A817 73,1
Error in line 20: kppv0AYvw A817 0,21
Error in line 11: HXm A624 14,6
Error in line 16: 7KdfhAfh A624 24,0
Error in line 18: kppv0AYvw A817 1,3
Error in line 26: 7KdfhAfh A817 34,3
Error in line 29: kppv0AYvw A89 85,0
